# Tensorearch

./: .gitignore  CLAUDE_READY_INDEX.md  MANIFEST.in  README.md  build_exe.ps1  pyproject.toml  repo_index.json  requirements.txt  tensorearch.spec
docs/: AGENT_JSON_USAGE.md  CLAUDE_DEVELOPMENT_GUIDE.md  CLI_USAGE.md  MATH_MODEL.md  OSCILLATOR_TRACE_CHECKLIST.md  ROADMAP.md  TDB_MAPPING.md  TRAINING_ANALYSIS_LAYERS.md  TRANSFORMER_TRACE_CHECKLIST.md
examples/: branching_oscillator_trace.json  branching_transformer_trace.json  glm5_dsa_profile_40_trace.json  glm5_flashdsa_trace.json  glm5_mla_profile_40_trace.json  glm5_mla_trace.json  oscillator_adapter_input.json  real_oscillator_quickcook_20000_input.json  real_oscillator_quickcook_20000_trace.json  real_transformer_quickcook_20000_input.json  real_transformer_quickcook_20000_trace.json  sample_trace.json  transformer_adapter_input.json
src/tensorearch/: __main__.py  adapters.py  cli.py  compare.py  demo.py  diagnose.py  execution.py  features.py  forecast.py  graph.py  intervention.py  io.py  metrics.py  propagation.py  report.py  schema.py  space.py  temporal.py  temporal_balance.py  temporal_couple.py  temporal_radio.py  training_contract.py  zombie.py
tests/: test_cli.py  test_compare.py  test_demo.py  test_execution.py  test_fixtures.py  test_intervention.py  test_metrics.py  test_temporal.py  test_temporal_balance.py  test_temporal_couple.py  test_temporal_radio.py
tests/lang_samples/: Dockerfile  Test.cs  Test.java  test.bas  test.cpp  test.e  test.js  test.kt  test.lua  test.php  test.rb  test.rs  test.sql  test.ts  test.yaml  test.zig
